--- a/legacy/docs-ref-mapping/reference.yml
+++ b/legacy/docs-ref-mapping/reference.yml
@@ -488,32 +488,7 @@
       children:
       - com.microsoft.azure.servicebus*
       - com.microsoft.azure.servicebus.amqp
-  - name: Service Fabric
-    uid: azure.java.sdk.landingpage.services.servicefabric
-    landingPageType: Service
-    items:
-    - name: Runtime
-      uid: azure.java.sdk.landingpage.services.servicefabric.Runtime
-      landingPageType: Service
-      children:
-      - microsoft.servicefabric.*
-    - name: Client
-      uid: azure.java.sdk.landingpage.services.servicefabric.Client
-      landingPageType: Service
-      children:
-      - system.fabric.description*
-      - system.fabric.health*
-      - system.fabric.interop*
-      - system.fabric.management.imageStore*
-      - system.fabric.query*
-      - system.fabric.repair*
-      - system.fabric.security*
-    - name: Common
-      uid: azure.java.sdk.landingpage.services.servicefabric.Common
-      landingPageType: Service
-      children:
-      - system.fabric*
-      - system.fabric.exception*
+  - name: SDK
     uid: azure.java.sdk.landingpage.services.sdk
     landingPageType: Service
     items:
