--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -164,5 +164,8 @@
         "open_to_public_contributors": false
       }
     }
-  ]
+  ],
+    "docs_build_engine": {
+    "name": "docfx_v3"
+  }
 }
